Poprawiono jezyk domyslny w pracy

--- a/magisterska.tex
+++ b/magisterska.tex
@@ -3,6 +3,7 @@
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
+\usepackage{polski}
 \usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
 \author{Anita Kudaj}
 \title{Praca mgr}
