dodano nazwy rozdziałów

--- a/magisterska.tex
+++ b/magisterska.tex
@@ -11,4 +11,16 @@
 
 \maketitle
 
+\tableofcontents
+
+\chapter{Wstęp}
+%TODO napiszemy na końcu
+\chapter{Preliminaria} %teorie, definicje, twierdzenia z innych działów - potrzebne do zrozumienia pracy
+
+\chapter{Modele tworzenia rekomendacji}
+
+\chapter{Eksperymenty / cześć praktyczne}
+
+\chapter{Podsumowanie}
+%TODO napiszemy na koncu
 \end{document}
