--- a/magisterska.tex
+++ b/magisterska.tex
@@ -4,6 +4,8 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{polski}
+\usepackage{natbib}
+\usepackage[hidelinks]{hyperref}
 \usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
 \author{Anita Kudaj}
 \title{Praca mgr}
@@ -23,4 +25,10 @@
 
 \chapter{Podsumowanie}
 %TODO napiszemy na koncu
+
+Korzystając z \citep[Rozdział 3, akapit 4]{ricci2015recommender}
+
+\nocite{*} %TODO remove
+\bibliographystyle{plain}
+\bibliography{bibliografia}
 \end{document}
